Bug 433820 - On demand Sidebar on top of other panel/dock
Summary: On demand Sidebar on top of other panel/dock
Status: CLOSED FIXED
Alias: None
Product: lattedock
Classification: Unmaintained
Component: application (other bugs)
Version First Reported In: git (master)
Platform: Manjaro Linux
: NOR normal
Target Milestone: ---
Assignee: Michail Vourlakos
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-03-01 21:44 UTC by mdums
Modified: 2021-03-05 09:43 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Latte-dock layout (11.00 KB, text/plain)
2021-03-01 21:44 UTC, mdums
Details

Note You need to log in before you can comment on or make changes to this bug.
Description mdums 2021-03-01 21:44:34 UTC
Created attachment 136298 [details]
Latte-dock layout

When putting the on demand sidebar on the same side as the panel/dock with the on demand button, if the sidebar is focus the panel/dock is not accessible thus the button too


STEPS TO REPRODUCE
1. Put a panel left of the screen
2. Put the on demand sidebar left with enough screen edge to put it after the panel
3. Put the on demand button in the panel and link it to the sidebar
4. Click the button
5. Click the sidebar
6. Try to click the button again

OBSERVED RESULT
The button cannot be access again

EXPECTED RESULT
The sidebar should close

SOFTWARE/OS VERSIONS
Linux: 5.4 lts
KDE Plasma Version: 5.21.1 (test in 5.20 too)
KDE Frameworks Version: 5.79.0
Qt Version: 5.15.2

ADDITIONAL INFORMATION
X11
Comment 1 Michail Vourlakos 2021-03-04 17:24:21 UTC
Git commit 393db028b7dff57552be3faa7da3d2abb7d687d0 by Michail Vourlakos.
Committed on 04/03/2021 at 17:18.
Pushed by mvourlakos into branch 'master'.

provide access below screen margin for Docks

--using hidden VisibilityManager::floatingGapWindow
implementation in order to provide full access for
the area which is below the screen margin when the
user has disabled user interaction for that area

M  +23   -29   app/view/visibilitymanager.cpp
M  +10   -2    app/view/visibilitymanager.h
M  +31   -3    containment/package/contents/ui/VisibilityManager.qml
M  +1    -0    shell/package/contents/configuration/pages/BehaviorConfig.qml

https://invent.kde.org/plasma/latte-dock/commit/393db028b7dff57552be3faa7da3d2abb7d687d0
Comment 2 mdums 2021-03-04 21:03:20 UTC
I have pull the last master, re-install it, (and remove it and reinstall it just to be sure) but it doesn't seems to do anything, if i click on the sidebar, i cannot click on the lefter panel anymore

I have try to create a new layout just to be sure that it wasn't my layout config that was broken but the problem appeared again
Comment 3 Michail Vourlakos 2021-03-04 21:32:13 UTC
It works, disable in your SideBar the interaction for the screen gap.
Comment 4 mdums 2021-03-04 21:52:53 UTC
Ok i have retried it with no result
However if instead of on demand sidebar, i choose sidebar autohide it is working

It looked a little bit a the commit and if in "containment/package/contents/ui/VisibilityManager.qml" I add:
|| latteView.visibility.mode === LatteCore.Types.SidebarOnDemand
after "|| latteView.visibility.mode === LatteCore.Types.SidebarAutoHide" line 335 it is working perfectly
Does this make sense ?
Comment 5 Michail Vourlakos 2021-03-05 09:33:07 UTC
Git commit c67a8775561c0b64879abca99d605d8323d37c5a by Michail Vourlakos.
Committed on 05/03/2021 at 09:31.
Pushed by mvourlakos into branch 'master'.

fix Floating Gap SideBar case not accepting input

M  +3    -7    containment/package/contents/ui/VisibilityManager.qml
M  +6    -0    containment/package/contents/ui/main.qml
M  +2    -1    shell/package/contents/configuration/canvas/HeaderSettings.qml

https://invent.kde.org/plasma/latte-dock/commit/c67a8775561c0b64879abca99d605d8323d37c5a
Comment 6 Michail Vourlakos 2021-03-05 09:33:39 UTC
(In reply to mdums from comment #4)
> Ok i have retried it with no result
> However if instead of on demand sidebar, i choose sidebar autohide it is
> working
> 
> It looked a little bit a the commit and if in
> "containment/package/contents/ui/VisibilityManager.qml" I add:
> || latteView.visibility.mode === LatteCore.Types.SidebarOnDemand
> after "|| latteView.visibility.mode === LatteCore.Types.SidebarAutoHide"
> line 335 it is working perfectly
> Does this make sense ?

ok, please try again
Comment 7 mdums 2021-03-05 09:42:59 UTC
Work like a charm
Thanks